_build/_log
### Starting build.
# Target: graph.ml.depends, tags: { package(graphics), package(unix), extension:ml, file:graph.ml, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package unix -package graphics -modules graph.ml > graph.ml.depends
+ ocamlfind ocamldep -package unix -package graphics -modules graph.ml > graph.ml.depends
File "graph.ml", line 176, characters 7-9:
176 |   done ;;
             ^^
Error: Syntax error
Command exited with code 2.
# Compilation unsuccessful.
